--- a/src/main/resources/templates/usuarios/alta.html
+++ b/src/main/resources/templates/usuarios/alta.html
@@ -3,10 +3,9 @@
 <head>
     <title>Spring Boot Thymeleaf Hello World Example</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}"/>
+
 
 
 </head>
@@ -44,7 +43,7 @@
 <!-- /.container -->
 
 <script type="text/javascript"
-        src="webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        th:src="@{/js/bootstrap.min.js}"></script>
 
 </body>
 </html>
