--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -5,6 +5,7 @@
 
 		<link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
 		<link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}"/>
+		<script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
 
 	</head>
 
@@ -31,10 +32,10 @@
 					   <div class="row">
 							<div class="offset-sm-4 col-sm-4">
 								<div class="form-group">
-									<input type="text" class="form-control" placeholder="Email address" id="email" name="email" />
+									<input type="text" class="form-control" placeholder="Email address" id="email" th:field="*{email}" />
 								</div>
 								<div class="form-group">
-									<input type="password" class="form-control" placeholder="Password" id="j_password" name="j_password"/>
+									<input type="password" class="form-control" placeholder="Password" id="password" th:field="*{password}"/>
 								</div>
 								<div class="offset-sm-4 col-sm-2">
 									<button type="submit" class="btn btn-secondary btn-login">Entrar</button>
@@ -54,11 +55,11 @@
 				   </div>
 					<div class="col-sm-4">
 					  <h4>Encontranos en:</h4>
-						<!--<a th:href=""><img class="img_red" th:src="@{/img/facebook.png}" alt="facebook"/></a>-->
-						<!--<a th:href=""><img class="img_red" th:src="@{/img/instagram.png}" alt="instagram" /></a>-->
+						<img class="img_red" th:src="@{/img/facebook.png}" alt="facebook"/>
+						<img class="img_red" th:src="@{/img/instagram.png}" alt="instagram" />
 					</div>
 					<div class="col-sm-4">
-						<!--<a th:href=""><img class="img_red" th:src="@{/img/playstore.png}" alt="playstore"/></a>-->
+						<img class="img_red" th:src="@{/img/playstore.png}" alt="playstore"/>
 						<h4 >Descargar APP</h4>
 					</div>
 				</div>
