--- a/src/main/resources/templates/admin/admEvento.html
+++ b/src/main/resources/templates/admin/admEvento.html
@@ -99,10 +99,8 @@
                             <label for="filtrar_combo">Filtrar:</label>
                                 <select class="form-control" id="filtrar_combo">
                                     <option th:value="null" th:text="Todos"></option>
-                                    <option th:value="null" th:text="Admin"></option>
                                     <option th:value="null" th:text="Activos"></option>
-                                    <option th:value="null" th:text="Suspendidos"></option>
-                                    <option th:value="null" th:text="Usuario"></option>
+                                    <option th:value="null" th:text="Vencidos"></option>
                                 </select>
                         </div>
                    </div>
