--- a/src/main/resources/templates/admin/admUsuarios.html
+++ b/src/main/resources/templates/admin/admUsuarios.html
@@ -31,129 +31,134 @@
   <li class="list-group-item list-group-item-dark disable">Administrar</li>
   <a href="admUsuarios.html" class="list-group-item list-group-item-action active">Usuarios</a>
   <a href="admServicio.html" class="list-group-item list-group-item-action">Servicios</a>
-  <a href="admEvento.html" class="list-group-item list-group-item-action">Eventos</a>
+  <a href="admEvento.html"   class="list-group-item list-group-item-action">Eventos</a>
 </ul>
 </div>
 <!-- FIN MENU ADMINISTRAR-->
 
 <!--AGREGAR USUARIO-->
-<div class="col-sm-9">
-<form action="">    
- <h6>Crear Usuario</h6>
-<div class="card">
-<div class="card-body">
-<div class="row">
+    <div class="col-sm-9">
+            <form action="">
+             <h6>Crear Usuario</h6>
+                <div class="card">
+                    <div class="card-body">
+                        <div class="row">
 
-<div class="col-sm-4">
-<div class="form-group">
-            <label for="nombre">Nombre:</label>
-            <input type="text" class="form-control" id="nombre">
-            </div><div class="form-group">
-            <label for="email">Email:</label>
-            <input type="text" class="form-control" id="email">
-            </div>
+                            <div class="col-sm-4">
+                                <div class="form-group">
+                                    <label for="nombre">Nombre:</label>
+                                    <input type="text" class="form-control" id="nombre" /> <!--th:field="*{}"-->
+
+                                </div>
+                                <div class="form-group">
+                                    <label for="email">Email:</label>
+                                    <input type="text" class="form-control" id="email" /> <!--th:field="*{}"-->
+                                </div>
+                            </div>
+
+                            <div class="col-sm-4">
+                                <div class="form-group">
+                                    <label for="apellido">Apellido:</label>
+                                    <input type="text" class="form-control" id="apellido" /> <!--th:field="*{}"-->
+                                </div>
+                                <div class="form-group">
+                                    <label for="password">Password:</label>
+                                    <input type="text" class="form-control" id="password" /> <!--th:field="*{}"-->
+                                </div>
+                            </div>
+
+                            <div class="col-sm-4">
+                                <div class="form-group">
+                                    <label for="usuario">Usuario:</label>
+                                    <input type="text" class="form-control" id="usuario" /><!--th:field="*{}"-->
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="rol">Rol:</label>
+                                    <select class="form-control" id="rol">
+                                        <option th:value="null" th:text="Admin"></option>
+                                        <option th:value="null" th:text="Usuario"></option>
+                                    </select>
+                                </div>
+                                 <button type="submit" class="btn btn-secondary float-right">Crear</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </form>
+    </div>
+
 </div>
 
-<div class="col-sm-4">
-<div class="form-group">
-            <label for="apellido">Apellido:</label>
-            <input type="text" class="form-control" id="apellido">
-            </div><div class="form-group">
-            <label for="password">Password:</label>
-            <input type="text" class="form-control" id="password">
-            </div>
-</div>
-
-<div class="col-sm-4">
-<div class="form-group">
-            <label for="usuario">Usuario:</label>
-            <input type="text" class="form-control" id="usuario">
-            </div>
-
-
-<div class="form-group">
-            <label for="rol">Rol:</label>
-            <select class="form-control" id="rol">
-                <option>Admin</option>
-                <option>Público</option>
-            </select>
-            </div>
-            <button type="submit" class="btn btn-secondary float-right">Crear</button>      
-      </div>    
-</form>
-</div>
-</div>
-</div>
-</div>
 <!-- FIN FORM AGREGAR USUARIO-->
-</div>
 
 <!-- MENU ESTADISTICAS-->
 	<div class="divisor"></div>
-<div class="row">
-<div class="col-sm-3">
-<ul class="list-group">
-  <li class="list-group-item list-group-item-dark disable">Estaditicas</li>
-  <a href="admUsuarios.html" class="list-group-item list-group-item-action">Usuarios</a>
-  <a href="admServicio.html" class="list-group-item list-group-item-action">Servicios</a>
-  <a hhref="adm_evn.html" class="list-group-item list-group-item-action">Eventos</a>
-</ul>
-</div>
+
+    <div class="row">
+        <div class="col-sm-3">
+            <ul class="list-group">
+              <li class="list-group-item list-group-item-dark disable">Estaditicas</li>
+              <a href="admUsuarios.html" class="list-group-item list-group-item-action">Usuarios</a>
+              <a href="admServicio.html" class="list-group-item list-group-item-action">Servicios</a>
+              <a hhref="admEvento.html" class="list-group-item list-group-item-action">Eventos</a>
+            </ul>
+        </div>
 <!-- FIN MENU ESTADISTICAS-->
 
 <!-- TABLA DE SERVICIOS INGRESADOS-->
-<div class="col-sm-9">
-   <form action="">
-  <div class="row">
-  <div class="col-sm-5">
-   <h6>Ingresados</h6>
-   </div>
-   <div class="col-sm-2">
-<div class="form-group">
-            <label for="filtrar">Filtrar:</label>
-            <select class="form-control" id="filtrar_combo">
-                <option>Todos</option>
-                <option>Admin</option>
-                <option>Activos</option>
-                <option>Suspendidos</option>
-                <option>Usuario</option>
-            </select>
-            </div>
-            </div>
-            <div class="col-sm-3">
+    <div class="col-sm-9">
+        <form th:action="@{/usuarios/guardarUsuario}" th:object="${usuarioDTO}" method="POST">
+          <div class="row">
+              <div class="col-sm-5">
+               <h6>Ingresados</h6>
+               </div>
+               <div class="col-sm-2">
+                    <div class="form-group">
+                        <label for="filtrar_combo">Filtrar:</label>
+                        <select class="form-control" id="filtrar_combo">
+                            <option th:value="null" th:text="Todos"></option>
+                            <option th:value="null" th:text="Admin"></option>
+                            <option th:value="null" th:text="Activos"></option>
+                            <option th:value="null" th:text="Suspendidos"></option>
+                            <option th:value="null" th:text="Usuario"></option>
+                        </select>
+                    </div>
+               </div>
+              <div class="col-sm-3">
                 <label for="filtro">Ingrese filtro:</label>
-            <input type="text" class="form-control" id="filtro">
-            </div>
-            <div class="col-sm-2">
-            <button type="submit" class="btn btn-secondary buscar">Buscar</button> 
-            </div>
-            </form>
-      </div>
-    <table class="table table-sm table-hover table-bordered text-center">
-  <thead>
-    <tr >
-      <th scope="col">Usuario</th>
-      <th scope="col">Email</th>
-      <th scope="col">Estado</th>
-      <th scope="col">Acción</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-         <td>
-        <a href=""><img class="options" src="../../../../../../../Desktop/Adopta.Me-Web/images/ckeck.png" alt="check"></a>
-        <a href=""><img class="options" src="../../../../../../../Desktop/Adopta.Me-Web/images/block.png" alt="block"></a>
-        <a href=""><img class="options" src="../../../../../../../Desktop/Adopta.Me-Web/images/cancel.png" alt="cancel"></a>
-        </td>
-    </tr>
-  </tbody>
-</table>
-</div>
+                <input type="text" class="form-control" id="filtro" />
+              </div>
+                <div class="col-sm-2">
+                    <button type="submit" class="btn btn-secondary buscar">Buscar</button>
+                </div>
+          </div>
+        </form>
+            <table class="table table-sm table-hover table-bordered text-center">
+              <thead>
+                <tr>
+                  <th scope="col">Usuario</th>
+                  <th scope="col">Email</th>
+                  <th scope="col">Estado</th>
+                  <th scope="col">Acción</th>
+                </tr>
+              </thead>
+          <tbody>
+            <tr>
+              <th scope="row">1</th>
+              <td>Mark</td>
+              <td>Otto</td>
+                 <td>
+                     <a th:href="index.html"><img class="options" th:src="@{/img/check.png}" alt="check"/></a>
+                     <a th:href="index.html"><img class="options" th:src="@{/img/block.png}" alt="block"/></a>
+                     <a th:href="index.html"><img class="options" th:src="@{/img/cancel.png}" alt="cancel"/></a>
+                 </td>
+            </tr>
+          </tbody>
+        </table>
+    </div>
+    </div>
 <!-- FIN TABLA DE SERVICIOS INGRESADOS-->
 </div>
-</div>	
 </body>
 </html>
