--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -14,11 +14,11 @@
 			<div class="wrapper col-xs-12 col-sm-12">
 				<img class="logo" th:src="@{/img/iconPet.png}" alt="logo"/>
 				<div class="logo">Adopta.Me</div>
-				<nav>
-					<a th:href="index.html">Inicio</a>
-					<a th:href="eventos.html">Eventos</a>
-					<a th:href="login.html">Admin</a>
-				</nav>
+                <nav>
+                    <a th:href="@{/}">Inicio</a>
+                    <a th:href="@{/eventos}">Eventos</a>
+                    <a th:href="@{/login/login}">Admin</a>
+                </nav>
 			</div>
 		</header>
 
