agregar usuario en la pagina de adm

--- a/src/main/resources/templates/admin/admServicio.html
+++ b/src/main/resources/templates/admin/admServicio.html
@@ -34,7 +34,7 @@
 <div class="col-sm-3">
 <ul class="list-group">
   <li class="list-group-item list-group-item-dark disable">Administrar</li>
-  <a href="admUsuarios.html" class="list-group-item list-group-item-action">Usuarios</a>
+  <a href="../usuarios/admUsuarios.html" class="list-group-item list-group-item-action">Usuarios</a>
   <a href="admServicio.html" class="list-group-item list-group-item-action active">Servicios</a>
   <a href="admEvento.html" class="list-group-item list-group-item-action">Eventos</a>
 </ul>
@@ -137,7 +137,7 @@
 <div class="col-sm-3">
 <ul class="list-group">
   <li class="list-group-item list-group-item-dark disable">Estaditicas</li>
-  <a href="admUsuarios.html" class="list-group-item list-group-item-action">Usuarios</a>
+  <a href="../usuarios/admUsuarios.html" class="list-group-item list-group-item-action">Usuarios</a>
   <a href="admServicio.html" class="list-group-item list-group-item-action">Servicios</a>
   <a hhref="adm_evn.html" class="list-group-item list-group-item-action">Eventos</a>
 </ul>
