--- a/src/main/resources/templates/usuarios/admUsuarios.html
+++ b/src/main/resources/templates/usuarios/admUsuarios.html
@@ -33,10 +33,10 @@
 <div class="col-sm-3">
 <ul class="list-group">
   <li class="list-group-item list-group-item-dark disable">Administrar</li>
-  <a href="admUsuarios.html" class="list-group-item list-group-item-action active">Usuarios</a>
+  <a th:href="@{/usuarios/nuevoUsuario}" class="list-group-item list-group-item-action active">Usuarios</a>
 
-  <a href="admServicios.html" class="list-group-item list-group-item-action">Servicios</a>
-  <a href="admEventos.html" class="list-group-item list-group-item-action">Eventos</a>
+  <a th:href="@{/prestador/nuevoPrestador}" class="list-group-item list-group-item-action">Servicios</a>
+  <a th:href="@{/prestador/nuevoPrestador}" class="list-group-item list-group-item-action">Eventos</a>
 </ul>
 </div>
 <!-- FIN MENU ADMINISTRAR-->
@@ -106,10 +106,10 @@
         <div class="col-sm-3">
             <ul class="list-group">
               <li class="list-group-item list-group-item-dark disable">Estaditicas</li>
-              <a href="admUsuarios.html" class="list-group-item list-group-item-action">Usuarios</a>
+              <a th:href="@{/nuevoUsuario}" class="list-group-item list-group-item-action">Usuarios</a>
 
-              <a href="admServicios.html" class="list-group-item list-group-item-action">Servicios</a>
-              <a hhref="admEvento.html" class="list-group-item list-group-item-action">Eventos</a>
+              <a th:href="@{/nuevoPrestador}" class="list-group-item list-group-item-action">Servicios</a>
+              <a th:hhref="@{/nuevoPrestador}" class="list-group-item list-group-item-action">Eventos</a>
             </ul>
         </div>
 <!-- FIN MENU ESTADISTICAS-->
